Removed Boolean instantiation. Expanded star import.
Signed-off-by: John May <john.wilkinsonmay@gmail.com>